5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1592_1801.log
== TEST (2019-03-31 20:44:42) 
-- CODE:
texto = ("abra o caderno")
rept = texto*4
print(texto)
print(rept)
-- OUTPUT:
abra o caderno
abra o cadernoabra o cadernoabra o cadernoabra o caderno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:44:53) 
-- CODE:
texto = ("abra o caderno")
rept = texto*4
print(texto)
print(rept)
-- EXECUTION TIME:
0.16339
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra o caderno
abra o cadernoabra o cadernoabra o cadernoabra o caderno
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra o caderno
abra o cadernoabra o cadernoabra o cadernoabra o caderno
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra o caderno
abra o cadernoabra o cadernoabra o cadernoabra o caderno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:45:32) 
-- CODE:
texto = ("abra o caderno")
rept = texto*4
print(texto.upper())
print(rept)
-- OUTPUT:
ABRA O CADERNO
abra o cadernoabra o cadernoabra o cadernoabra o caderno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:45:34) 
-- CODE:
texto = ("abra o caderno")
rept = texto*4
print(texto.upper())
print(rept)
-- EXECUTION TIME:
0.282472
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
ABRA O CADERNO
abra o cadernoabra o cadernoabra o cadernoabra o caderno
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
ABRA O CADERNO
abra o cadernoabra o cadernoabra o cadernoabra o caderno
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
ABRA O CADERNO
abra o cadernoabra o cadernoabra o cadernoabra o caderno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:47:04) 
-- CODE:
texto = ("abra + o caderno")
rept = texto*4
print(texto.upper())
print(rept)
-- OUTPUT:
ABRA + O CADERNO
abra + o cadernoabra + o cadernoabra + o cadernoabra + o caderno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:47:09) 
-- CODE:
texto = ("abra + o caderno")
rept = texto*4
print(texto.upper())
print(rept)
-- EXECUTION TIME:
0.118756
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
ABRA + O CADERNO
abra + o cadernoabra + o cadernoabra + o cadernoabra + o caderno
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
ABRA + O CADERNO
abra + o cadernoabra + o cadernoabra + o cadernoabra + o caderno
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
ABRA + O CADERNO
abra + o cadernoabra + o cadernoabra + o cadernoabra + o caderno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:47:28) 
-- CODE:
texto = ("abra + o caderno")
rept = texto*4
print(texto.lower())
print(rept)
-- OUTPUT:
abra + o caderno
abra + o cadernoabra + o cadernoabra + o cadernoabra + o caderno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:47:34) 
-- CODE:
texto = ("abra + o caderno")
rept = texto*4
print(texto.lower())
print(rept)
-- EXECUTION TIME:
0.155601
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra + o caderno
abra + o cadernoabra + o cadernoabra + o cadernoabra + o caderno
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra + o caderno
abra + o cadernoabra + o cadernoabra + o cadernoabra + o caderno
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra + o caderno
abra + o cadernoabra + o cadernoabra + o cadernoabra + o caderno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:47:53) 
-- CODE:
texto = ("abra + o caderno")
rept = texto*4
print(texto.lower())
print(rept)
-- OUTPUT:
abra + o caderno
abra + o cadernoabra + o cadernoabra + o cadernoabra + o caderno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:48:21) 
-- CODE:
texto = ("abra + nome_do_objeto")
rept = texto*4
print(texto.lower())
print(rept)
-- OUTPUT:
abra + nome_do_objeto
abra + nome_do_objetoabra + nome_do_objetoabra + nome_do_objetoabra + nome_do_objeto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:48:27) 
-- CODE:
texto = ("abra + nome_do_objeto")
rept = texto*4
print(texto.lower())
print(rept)
-- EXECUTION TIME:
0.143437
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra + nome_do_objeto
abra + nome_do_objetoabra + nome_do_objetoabra + nome_do_objetoabra + nome_do_objeto
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra + nome_do_objeto
abra + nome_do_objetoabra + nome_do_objetoabra + nome_do_objetoabra + nome_do_objeto
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra + nome_do_objeto
abra + nome_do_objetoabra + nome_do_objetoabra + nome_do_objetoabra + nome_do_objeto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:51:49) 
-- CODE:
texto = (input("Leia o nome do objeto"))

rept = texto*4
print(texto.lower())
print(rept)
-- OUTPUT:
livro
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:52:02) 
-- CODE:
texto = (input("Leia o nome do objeto"))

rept = texto*4
print(texto.lower())
print(rept)
-- OUTPUT:
livro
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:52:04) 
-- CODE:
texto = (input("Leia o nome do objeto"))

rept = texto*4
print(texto.lower())
print(rept)
-- EXECUTION TIME:
0.167893
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livro
livrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carro
carrocarrocarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
caixacaixacaixacaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:52:46) 
-- CODE:
texto = (input("Leia o nome do objeto"))
texto = ("abra + porta")
rept = texto*4
print(texto.lower())
print(rept)
-- OUTPUT:
abra + porta
abra + portaabra + portaabra + portaabra + porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:52:54) 
-- CODE:
texto = (input("Leia o nome do objeto"))
texto = ("abra + porta")
rept = texto*4
print(texto.lower())
print(rept)
-- EXECUTION TIME:
0.163482
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra + porta
abra + portaabra + portaabra + portaabra + porta
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra + porta
abra + portaabra + portaabra + portaabra + porta
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra + porta
abra + portaabra + portaabra + portaabra + porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:56:19) 
-- CODE:
texto = (input("Leia o nome do objeto"))
rept = float(input("qual o numero de repetiçoes?")
texto = ("abra + porta")
vezes = texto*rept
print(texto.lower())
print(vezes)
-- ERROR:
File "XXXX", line 3
    texto = ("abra + porta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:56:41) 
-- CODE:
texto = (input("Leia o nome do objeto"))
rept = float(input("qual o numero de repetiçoes?")

vezes = texto*rept
print(texto.lower())
print(vezes)
-- ERROR:
File "XXXX", line 4
    vezes = texto*rept
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:57:28) 
-- CODE:
texto = (input("Leia o nome do objeto"))
rept = float(input("qual o numero de repetiçoes?")
texto = ("abra + nome_do_objeto")
vezes = texto*rept
print(texto.lower())
print(vezes)
-- ERROR:
File "XXXX", line 3
    texto = ("abra + nome_do_objeto")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:57:54) 
-- CODE:
texto = (input("Leia o nome do objeto"))
rept = float(input("qual o numero de repetiçoes?")

vezes = texto*rept
print(texto.lower())
print(vezes)
-- ERROR:
File "XXXX", line 4
    vezes = texto*rept
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:57:56) 
-- CODE:
texto = (input("Leia o nome do objeto"))
rept = float(input("qual o numero de repetiçoes?")

vezes = texto*rept
print(texto.lower())
print(vezes)
-- EXECUTION TIME:
0.216832
-- ERROR:
  File "/home/codebench/codes/1592/1801/main.py", line 4
    vezes = texto*rept
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:58:41) 
-- CODE:
texto = (input("Leia o nome do objeto"))
rept = float(input("qual o numero de repetiçoes?")
vezes = texto*rept
print(texto.lower())
print(texto.upper())
print(vezes)
-- ERROR:
File "XXXX", line 3
    vezes = texto*rept
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:58:44) 
-- CODE:
texto = (input("Leia o nome do objeto"))
rept = float(input("qual o numero de repetiçoes?")
vezes = texto*rept
print(texto.lower())
print(texto.upper())
print(vezes)
-- EXECUTION TIME:
0.203182
-- ERROR:
  File "/home/codebench/codes/1592/1801/main.py", line 3
    vezes = texto*rept
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:59:07) 
-- CODE:
texto = (input("Leia o nome do objeto"))
rept = float(input("qual o numero de repetiçoes?")
texto = ("Abra + nome_do_objeto")
vezes = texto*rept
print(texto.lower())
print(texto.upper())
print(vezes)
-- ERROR:
File "XXXX", line 3
    texto = ("Abra + nome_do_objeto")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:59:10) 
-- CODE:
texto = (input("Leia o nome do objeto"))
rept = float(input("qual o numero de repetiçoes?")
texto = ("Abra + nome_do_objeto")
vezes = texto*rept
print(texto.lower())
print(texto.upper())
print(vezes)
-- EXECUTION TIME:
0.18358
-- ERROR:
  File "/home/codebench/codes/1592/1801/main.py", line 3
    texto = ("Abra + nome_do_objeto")
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:04:13) 
-- CODE:
texto = (input("Leia o nome do objeto"))
rept = float(input("qual o numero de repetiçoes?")
vezes = texto*rept
print(texto)
print(vezes)
-- ERROR:
File "XXXX", line 3
    vezes = texto*rept
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:04:46) 
-- CODE:
texto = (input("Leia o nome do objeto"))
rept = float(input("qual o numero de repetiçoes?")
vezes = texto*rept
print(texto)
print(vezes)
print(rept)
-- ERROR:
File "XXXX", line 3
    vezes = texto*rept
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:05:11) 
-- CODE:
texto = (input("Leia o nome do objeto"))
rept = float(input("qual o numero de repetiçoes?")
vezes = texto*rept

print(vezes)

-- ERROR:
File "XXXX", line 3
    vezes = texto*rept
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
